# open-machine-plattform

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Makefile  README.md  build_frontend.sh  conftest.py  dev_requirements.txt  install_frontend.sh  manage.py  omap.py  package-lock.json  prod_requirements.txt  pyproject.toml  pytest.ini  pytest_setup.py  requirements.txt  setup.cfg  setup.py  start.sh  start_frontend_dev_server.sh  tox.ini
.github/workflows/: django.yml  license-check.yml
docs/: architecture.rst  conf.py  developers.rst  faq.rst  index.rst  mqtt.rst  quickstart.rst  requirements.txt  support.rst
docs/_static/: custom.css  custom.js
docs/_templates/: layout.html
docs/features/: e2e.rst  features.rst  messaging.rst
omap/: manage.py  settings.py
omap/assets/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
omap/assets/migrations/: 0001_initial.py  0002_assetrelation_relationtype.py  0003_auto_20211226_2103.py  0004_alter_relationtype_id.py
omap/core/: admin.py  apps.py  dynamic_forms.py  dynamic_models.py  models.py  test_dynamic_forms.py  test_dynamic_models.py  urls.py  views.py
omap/core/tasks/: models.py
omap/frontend/: apps.py  tests.py
omap/launcher/: settings.py  urls.py
omap/modules/: __init__.py  asgi.py  base_settings.py  module_urls.py  modules.py  omap_module_registry.py  wsgi.py
omap/theme/: apps.py
omap_site/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
portal/: requirements.txt
portal/portal/: asgi.py  settings.py  urls.py  wsgi.py
portal/tests/: test_portal.py
(+38 files in other folders)
